# YENIkobifevzi-firewall-system

./: .gitignore  README.md  backend_digest.txt  digest.txt  docker-compose.yml  package.json
.github/workflows/: ci.yml
backend/: .env  Dockerfile  create_admin.py  nodemon.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run_server.py  server.js  simple_test.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  middleware.py  models.py  schemas.py  settings.py
backend/app/models/: reports.py
backend/app/routers/: __init__.py  auth.py  auth_simple.py  backup.py  dns.py  firewall.py  firewall_groups.py  logs.py  nat.py  network.py  reports.py  routes.py  settings.py  settings_router.py  status.py  system.py
backend/app/schemas/: reports.py
backend/app/services/: __init__.py  firewall_service.py  log_service.py  nat_service.py  network_service.py  reports_service.py
backend/app/tasks/: __init__.py  cleanup.py  firewall_sync.py  health_monitor.py  log_watcher.py
backend/middleware/: auth.js  dataRetention.js  errorHandler.js
backend/models/: FirewallRule.js  NetworkActivity.js  SystemStats.js  User.js
backend/routes/: auth.js  dashboard.js  firewall.js  logs.js  nat.js  security.js  settings.js  system.js  users.js
backend/scripts/: install_system_requirements.sh
backend/services/: dataCollectionService.js
backend/utils/: logger.js
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  index.html  package-lock.json  package.json  server.js  tailwind.config.js  test-connection.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: AnalyticsChart.jsx  Badge.jsx  Button.jsx  Card.jsx  DataPersistenceIndicator.jsx  ErrorBoundary.jsx  ErrorFallback.jsx  ErrorMessage.jsx  Header.jsx  Input.jsx  Layout.jsx  LoadingSpinner.jsx  Modal.jsx  ProgressBar.css  ProgressBar.jsx  ProtectedRoute.jsx  RealTimeIndicator.jsx  RecentActivity.jsx  Select.jsx  Sidebar.jsx  StatCard.jsx  StatusIndicator.jsx  Switch.jsx  SystemStatusCard.jsx  Table.jsx  index.js
frontend/src/contexts/: AuthContext.jsx
frontend/src/hooks/: useAuth.jsx  useTheme.jsx
frontend/src/i18n/: config.js
frontend/src/pages/: Dashboard.jsx  DashboardPage.jsx  DnsManagement.css  DnsManagement.jsx  FirewallRulesPage.jsx  InterfaceSettings.css  InterfaceSettings.jsx  Login.jsx  LoginPage.jsx  Logs.css  Logs.jsx  LogsPage.jsx  NatSettings.css  NatSettings.jsx  Reports.jsx  Routes.css  Routes.jsx  RuleGroups.css  RuleGroups.jsx  SecurityRules.css  SecurityRules.jsx  Settings.css  Settings.jsx  SettingsPage.jsx  Updates.jsx
frontend/src/services/: api.js  dashboardService.js  dnsService.js  interfaceService.js  logsService.js  natService.js  reportsService.js  routesService.js  ruleGroupsService.js  securityRulesService.js  settingsService.js  updatesService.js  websocketService.js
frontend/src/styles/: index.css
frontend/src/utils/: axios.js
frontend/utils/: axios.js
